// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreferredHeroesContainer/> Should render in the correct format with preferred heroes 1`] = `
<div
  className="PreferredHeroes-HeroList sidebar-card flex flex-column"
>
  <div
    className="flex justify-between"
  >
    <div
      className="sidebar-title"
    >
      Preferred Heroes
    </div>
    <span
      aria-hidden={true}
      className="fa fa-cog"
    />
  </div>
  <div
    className="flex justify-between"
  >
    <img
      alt="genji icon"
      className="HeroImage"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="tracer icon"
      className="HeroImage"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="winston icon"
      className="HeroImage"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="mei icon"
      className="HeroImage"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="phara icon"
      className="HeroImage"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
</div>
`;

exports[`<PreferredHeroesContainer/> Should render in the correct format without any preferred heroes 1`] = `
<div
  className="PreferredHeroes-HeroList sidebar-card flex flex-column"
>
  <div
    className="flex justify-between"
  >
    <div
      className="sidebar-title"
    >
      Preferred Heroes
    </div>
    <span
      aria-hidden={true}
      className="fa fa-cog"
    />
  </div>
  <div
    className="flex justify-between"
  >
    <div
      className="PreferredHeroes-AddHeroIcon flex justify-center align-center"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-plus"
      />
    </div>
    <div
      className="PreferredHeroes-AddHeroIcon flex justify-center align-center"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-plus"
      />
    </div>
    <div
      className="PreferredHeroes-AddHeroIcon flex justify-center align-center"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-plus"
      />
    </div>
    <div
      className="PreferredHeroes-AddHeroIcon flex justify-center align-center"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-plus"
      />
    </div>
    <div
      className="PreferredHeroes-AddHeroIcon flex justify-center align-center"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-plus"
      />
    </div>
  </div>
</div>
`;
